# Hotel-Predictive-Elevator-Simulator

./: .gitignore  AGENTS.md  DESIGN_DECISIONS.md  EXPERIMENT_RESULTS_GUIDE.md  EXPERIMENT_VALIDATION_PLAN.md  README.md  pyproject.toml  requirements.md
configs/: hotel_banquet.yaml  hotel_breakfast.yaml  hotel_checkout.yaml  paper_reproduction.yaml  smoke_test.yaml  trajectory_prediction.yaml
configs/validation/: hotel_banquet_baseline.yaml  hotel_banquet_trio_offset_0.yaml  hotel_banquet_trio_offset_minus180.yaml  hotel_banquet_trio_offset_minus300.yaml  hotel_banquet_trio_offset_minus60.yaml  hotel_banquet_trio_offset_plus180.yaml  hotel_banquet_trio_offset_plus300.yaml  hotel_banquet_trio_offset_plus60.yaml  hotel_breakfast_baseline.yaml  hotel_breakfast_trio.yaml  hotel_checkout_baseline.yaml  hotel_checkout_trio.yaml  hotel_checkout_trio_horizon_10.yaml  hotel_checkout_trio_horizon_20.yaml  hotel_checkout_trio_horizon_40.yaml  hotel_checkout_trio_luggage_1.0.yaml  hotel_checkout_trio_luggage_2.0.yaml
outputs/hotel_banquet/: assignment_log.csv  config.yaml  elevator_metrics.csv  event_log.csv  passenger_metrics.csv  summary.json
outputs/hotel_breakfast/: assignment_log.csv  config.yaml  elevator_metrics.csv  event_log.csv  passenger_metrics.csv  summary.json
outputs/hotel_checkout/: config.yaml  event_log.csv  passenger_metrics.csv
outputs/hotel_checkout_validation/: comparison_summary.csv  comparison_summary.json  paired_comparisons.csv  paired_comparisons.json  paired_comparisons_vs_baseline.csv  paired_comparisons_vs_baseline.json
(+1829 files in other folders)
