[project]
name = "elevator-sim"
version = "0.1.0"
description = "Hotel Predictive Elevator Group Control Simulator"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
